--- a/EventosCancun/EventosCancun/EventosCancun.csproj
+++ b/EventosCancun/EventosCancun/EventosCancun.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -160,9 +162,54 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="AspNetRoles.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUserClaims.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUserLogins.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUsers.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="C__MigrationHistory.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Etiquetas.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EtiquetasEvento.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EtiquetasUsuario.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventosCancun.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventosCancun.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventosCancun.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventosCancun.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventosCancun.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="EventoURLs.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -171,6 +218,9 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UsuariosMoviles.cs">
+      <DependentUpon>EventosCancun.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -181,6 +231,23 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="EventosCancun.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EventosCancun.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="EventosCancun.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventosCancun.edmx</DependentUpon>
+      <LastGenOutput>EventosCancun.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="EventosCancun.edmx.diagram">
+      <DependentUpon>EventosCancun.edmx</DependentUpon>
+    </Content>
+    <Content Include="EventosCancun.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventosCancun.edmx</DependentUpon>
+      <LastGenOutput>EventosCancun.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -238,6 +305,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
