--- a/EventosCancun/EventosCancun/Web.config
+++ b/EventosCancun/EventosCancun/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventosCancun;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="EventosCancunEntities" connectionString="metadata=res://*/EventosCancun.csdl|res://*/EventosCancun.ssdl|res://*/EventosCancun.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EventosCancun;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
