--- a/EventosCancun/EventosCancun/EventosCancun.csproj
+++ b/EventosCancun/EventosCancun/EventosCancun.csproj
@@ -175,6 +175,7 @@
       <DependentUpon>EventosCancun.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EtiquetasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="C__MigrationHistory.cs">
@@ -295,6 +296,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Etiquetas\Create.cshtml" />
+    <Content Include="Views\Etiquetas\Delete.cshtml" />
+    <Content Include="Views\Etiquetas\Details.cshtml" />
+    <Content Include="Views\Etiquetas\Edit.cshtml" />
+    <Content Include="Views\Etiquetas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
