--- a/EventosCancun/EventosCancun/EventosCancun.csproj
+++ b/EventosCancun/EventosCancun/EventosCancun.csproj
@@ -175,6 +175,7 @@
       <DependentUpon>EventosCancun.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Attributes.cs" />
     <Compile Include="Controllers\EtiquetasController.cs" />
     <Compile Include="Controllers\EventosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
