--- a/EventosCancun/EventosCancun/EventosCancun.csproj
+++ b/EventosCancun/EventosCancun/EventosCancun.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UploadFiles.asmx.cs">
+      <DependentUpon>UploadFiles.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UsuariosMoviles.cs">
       <DependentUpon>EventosCancun.tt</DependentUpon>
     </Compile>
@@ -231,6 +235,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\AgregarImagenes.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="EventosCancun.edmx">
@@ -650,10 +655,14 @@
     <Content Include="Scripts\jqwidgets\styles\jqx.ui-sunny.css" />
     <Content Include="Scripts\jqwidgets\styles\jqx.web.css" />
     <Content Include="Scripts\jqwidgets\styles\jqx.windowsphone.css" />
+    <Content Include="Scripts\jssor.js" />
+    <Content Include="Scripts\jssor.slider.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="UploadFiles.asmx" />
+    <Content Include="Uploads\a03.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -696,6 +705,7 @@
     <Content Include="Views\Etiquetas\Index.cshtml" />
     <Content Include="Views\Eventos\Index.cshtml" />
     <Content Include="Views\Eventos\CrearEvento.cshtml" />
+    <Content Include="Views\Eventos\AgregarImagenes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
